--- a/AUTHORS
+++ b/AUTHORS
@@ -10,10 +10,10 @@ Suwon Chae (doortts) <doortts@gmail.com>
 Yi EungJun (npcode) <semtlenori@gmail.com>
 JiHan Kim (laziel) <kim.jihan@navercorp.com>
 Keesun Baik (Whiteship) <whiteship@epril.com>
-Wansoon Park (wansoon) <alecsiel@naver.com>
-kjkmadness <kjkmadness@nhn.com>
 insanehong <insanehong@gmail.com>
 Changsung Kim <changsung.kim@navercorp.com>
+HeeGu Lee <elf_hazard@nhn.com>
+kiravspace <kiravspace@gmail.com>
 
 # Inactive committers (early leaver)
 Sangcheol Hwang <k16wire@nhn.com>
@@ -21,6 +21,8 @@ Yoon Kim <isyoonn@gmail.com>
 Ahn Hyeok Jun <qa22ahj@gmail.com>
 Hwi Ahn <hwi.ahn@gmail.com>
 Tae <dana.parkth@gmail.com>
+Wansoon Park (wansoon) <alecsiel@naver.com>
+kjkmadness <kjkmadness@nhn.com>
 
 # Design Support
 MiHyun Choi <mihyun.choi@nhn.com>
