authors: changed whiteship's email

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,7 +9,7 @@ Authors ordered by first contribution.
 Suwon Chae (doortts) <doortts@gmail.com>
 Yi EungJun (npcode) <semtlenori@gmail.com>
 JiHan Kim (laziel) <kim.jihan@navercorp.com>
-Keesun Baik (Whiteship) <whiteship@epril.com>
+Keesun Baik (Whiteship) <keesun.baik@navercorp.com>
 insanehong <insanehong@gmail.com>
 Changsung Kim <changsung.kim@navercorp.com>
 HeeGu Lee <elf_hazard@nhn.com>
