authors: Use navercorp.com email address

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,11 +6,11 @@
 Authors ordered by first contribution.
 
 # Active committers
-Suwon Chae (doortts) <doortts@gmail.com>
-Yi EungJun (npcode) <semtlenori@gmail.com>
+Suwon Chae (doortts) <sw.chae@navercorp.com>
+Yi EungJun (npcode) <eungjun.yi@navercorp.com>
 JiHan Kim (laziel) <kim.jihan@navercorp.com>
 Keesun Baik (Whiteship) <keesun.baik@navercorp.com>
-insanehong <insanehong@gmail.com>
+insanehong <insane.hong@navercorp.com>
 Changsung Kim <changsung.kim@navercorp.com>
 HeeGu Lee <elf_hazard@nhn.com>
 kiravspace <kiravspace@gmail.com>
