Add new and missed contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ SeungChang Lee <siaeye@nhn.com>
 Kate Lee <hyunkyoung@gmail.com>
 
 # Contributors
+Park Jongbhin <parkjongbhin@Park-Jongbhin-ui-MacBook-Pro.local>
 javarouka <javarouka@gmail.com>
 Daegeun Kim <dgkim84@gmail.com>
 Youngje Yun <youngje.yun@gmail.com>
@@ -39,3 +40,6 @@ JooHee Kang (joohee) <neigie@gmail.com>
 ChangJu Park (pcjpcj2) <pcjpcj2@gmail.com>
 charsyam <charsyam@gmail.com>
 kyungbeck <kbmyung@naver.com>
+Seo Sanghyeon <sanxiyn@gmail.com>
+Jihyun Yu <j.yu@navercorp.com>
+hyeok.oh <heyok.oh@navercorp.com>
