Add new contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -43,3 +43,8 @@ kyungbeck <kbmyung@naver.com>
 Seo Sanghyeon <sanxiyn@gmail.com>
 Jihyun Yu <j.yu@navercorp.com>
 hyeok.oh <heyok.oh@navercorp.com>
+Jason Sung <dythmall@gmail.com>
+marnitto <marnitto@gmail.com>
+beanmilk <ej81.park@navercorp.com>
+cnabro <cnabro91@gmail.com>
+Jihwan Chun <jihwan0321@kaist.ac.kr>
