AUTHORS: Clean up list

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,7 @@
 #
-# Yobi Project
+# Yona Project (history is continued from yobi)
 #
-# see: https://github.com/nforge/yobi/graphs/contributors
 
-Authors ordered by first contribution.
-
-# Active committers
 Suwon Chae (doortts) <sw.chae@navercorp.com>
 Yi EungJun (npcode) <eungjun.yi@navercorp.com>
 Keesun Baik (Whiteship) <keesun.baik@navercorp.com>
@@ -13,8 +9,6 @@ Deokhong Kim <insane.hong@navercorp.com>
 Changsung Kim <changsung.kim@navercorp.com>
 HeeGu Lee <elf_hazard@nhn.com>
 kiravspace <kiravspace@gmail.com>
-
-# Inactive committers (early leaver)
 Sangcheol Hwang <k16wire@nhn.com>
 Yoon Kim <isyoon@gmail.com>
 Ahn Hyeok Jun <qa22ahj@gmail.com>
@@ -23,15 +17,9 @@ Tae <dana.parkth@gmail.com>
 Wansoon Park (wansoon) <alecsiel@naver.com>
 kjkmadness <kjkmadness@nhn.com>
 Jihan Kim (laziel) <kim.jihan@navercorp.com>
-
-# Design Support
 MiHyun Choi <mihyun.choi@nhn.com>
 SeungChang Lee <siaeye@nhn.com>
-
-# Translation Support
 Kate Lee <hyunkyoung@gmail.com>
-
-# Contributors
 Park Jongbhin <parkjongbhin@Park-Jongbhin-ui-MacBook-Pro.local>
 javarouka <javarouka@gmail.com>
 Daegeun Kim <dgkim84@gmail.com>
