--- a/AUTHORS
+++ b/AUTHORS
@@ -36,3 +36,4 @@ marnitto <marnitto@gmail.com>
 beanmilk <ej81.park@navercorp.com>
 cnabro <cnabro91@gmail.com>
 Jihwan Chun <jihwan0321@kaist.ac.kr>
+ZerglingGo <zerglinggo@zerglinggo.net>
