AUTHORS: Add new yona contributors
pokev25 <pokev25@gmail.com>
Kyunghun Jeon <penpen787@gmail.com>
holyachon <holyachon@gmail.com>

Thanks! May the force be with you!

--- a/AUTHORS
+++ b/AUTHORS
@@ -37,3 +37,6 @@ beanmilk <ej81.park@navercorp.com>
 cnabro <cnabro91@gmail.com>
 Jihwan Chun <jihwan0321@kaist.ac.kr>
 ZerglingGo <zerglinggo@zerglinggo.net>
+pokev25 <pokev25@gmail.com>
+Kyunghun Jeon <penpen787@gmail.com>
+holyachon <holyachon@gmail.com>
