AUTHORS: Add new contributor
Add to new author who is
sihyun <gthpgth@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -40,3 +40,4 @@ ZerglingGo <zerglinggo@zerglinggo.net>
 pokev25 <pokev25@gmail.com>
 Kyunghun Jeon <penpen787@gmail.com>
 holyachon <holyachon@gmail.com>
+sihyun <gthpgth@gmail.com>
