--- a/AUTHORS
+++ b/AUTHORS
@@ -41,3 +41,4 @@ pokev25 <pokev25@gmail.com>
 Kyunghun Jeon <penpen787@gmail.com>
 holyachon <holyachon@gmail.com>
 sihyun <gthpgth@gmail.com>
+Sang Jun Lee <sjun.lee@navercorp.com>
