--- a/AUTHORS
+++ b/AUTHORS
@@ -42,3 +42,4 @@ Kyunghun Jeon <penpen787@gmail.com>
 holyachon <holyachon@gmail.com>
 sihyun <gthpgth@gmail.com>
 Sang Jun Lee <sjun.lee@navercorp.com>
+JeongHoon Byun (aka Outsider) <outsideris@gmail.com>
