--- a/AUTHORS
+++ b/AUTHORS
@@ -43,3 +43,4 @@ holyachon <holyachon@gmail.com>
 sihyun <gthpgth@gmail.com>
 Sang Jun Lee <sjun.lee@navercorp.com>
 JeongHoon Byun (aka Outsider) <outsideris@gmail.com>
+Wonjun Hong <hong.wonjun@gmail.com>
