AUTHORS: Add new contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -44,3 +44,6 @@ sihyun <gthpgth@gmail.com>
 Sang Jun Lee <sjun.lee@navercorp.com>
 JeongHoon Byun (aka Outsider) <outsideris@gmail.com>
 Wonjun Hong <hong.wonjun@gmail.com>
+Bean <enuri91@gmail.com>
+rimi <rimi@userinsight.co.kr>
+kenu <kenu.heo@gmail.com>
