AUTHORS: Add new contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -47,3 +47,4 @@ Wonjun Hong <hong.wonjun@gmail.com>
 Bean <enuri91@gmail.com>
 rimi <rimi@userinsight.co.kr>
 kenu <kenu.heo@gmail.com>
+DongHo Byun <cpascal@nextfloor.com>
