AUTHORS: Add new author

--- a/AUTHORS
+++ b/AUTHORS
@@ -48,3 +48,4 @@ Bean <enuri91@gmail.com>
 rimi <rimi@userinsight.co.kr>
 kenu <kenu.heo@gmail.com>
 DongHo Byun <cpascal@nextfloor.com>
+Mijeong Park <p.mj@naverlabs.com>
