AUTHORS: Add new commiter

--- a/AUTHORS
+++ b/AUTHORS
@@ -49,3 +49,4 @@ rimi <rimi@userinsight.co.kr>
 kenu <kenu.heo@gmail.com>
 DongHo Byun <cpascal@nextfloor.com>
 Mijeong Park <p.mj@naverlabs.com>
+Joonho Choi <timberx@naver.com>
