AUTHORS: Add new contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -50,3 +50,5 @@ kenu <kenu.heo@gmail.com>
 DongHo Byun <cpascal@nextfloor.com>
 Mijeong Park <p.mj@naverlabs.com>
 Joonho Choi <timberx@naver.com>
+GwanYeong Kim <gy741.kim@gmail.com>
+Father Vlasie <fv@spots.school>
